<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/toolbar"
    app:title="@string/criar_servico"
    app:navigationIcon="@drawable/ic_back_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_start"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="32dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_end"
    android:orientation="vertical"
    app:layout_constraintGuide_end="32dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

  <!--Título-->
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/service_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/titulo_do_servico"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"/>

  </com.google.android.material.textfield.TextInputLayout>

  <!--Descrição-->
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/service_description"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/descricao_do_servico"
    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintTop_toBottomOf="@+id/service_title">

    <com.google.android.material.textfield.TextInputEditText
      android:textAlignment="textStart"
      android:layout_width="match_parent"
      android:layout_height="95dp"
      android:inputType="textMultiLine" />

  </com.google.android.material.textfield.TextInputLayout>

  <!--Data-->
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/service_date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/data_servico"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:startIconDrawable="@drawable/ic_calendar"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintTop_toBottomOf="@+id/service_description">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusable="false"
      android:inputType="none"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_cancel_service"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintEnd_toEndOf="@id/guideline_end"
    app:layout_constraintBottom_toTopOf="@+id/btn_new_service"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:text="@string/cancelar"
    android:textAllCaps="false"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_new_service"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@id/guideline_end"
    android:layout_marginBottom="16dp"
    style="@style/Widget.MaterialComponents.Button"
    android:text="@string/criar_servico"
    android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>